test/library/standard/Random/RandomStreamInterface/getNextTestHalts.good
getNextTestHalts.chpl:8: error: halt reached - Cannot generate random numbers within empty range: [2, 1]
